tests/golden/invalid/inconsistent.rego
package fregot.tests.invalid.inconsistent

a = 1
a = 2

test_a {a == 3}
